# vxnoise

./: CMakeLists.txt  LICENSE  README.md
vx/: aligned_array_2d.hpp  aligned_array_3d.hpp
vx/noise/: Cellular.cpp  Cellular.hpp  Noise.hpp  NoiseFractal.hpp  Simplex.cpp  Simplex.hpp  SimplexFractal.cpp  SimplexFractal.hpp
vx/noise/impl/: CellularAVX2.cpp  CellularAVX2.hpp  CellularNormal.cpp  CellularNormal.hpp  CellularSSE2.cpp  CellularSSE2.hpp  CellularSSE42.cpp  CellularSSE42.hpp  SimplexAVX2.cpp  SimplexAVX2.hpp  SimplexFractalAVX2.cpp  SimplexFractalAVX2.hpp  SimplexFractalNormal.cpp  SimplexFractalNormal.hpp  SimplexFractalSSE2.cpp  SimplexFractalSSE2.hpp  SimplexFractalSSE42.cpp  SimplexFractalSSE42.hpp  SimplexNormal.cpp  SimplexNormal.hpp  SimplexSSE2.cpp  SimplexSSE2.hpp  SimplexSSE42.cpp  SimplexSSE42.hpp
vx/noise/simd/: NoiseAVX2.cpp  NoiseAVX2.hpp  NoiseSSE2.hpp  NoiseSSE42.hpp
vx/simd/: avx2.hpp  none.hpp  simd.cpp  simd.hpp  simd_level.hpp  sse2.hpp  sse42.hpp
